# web-api-client-rs

./: .gitignore  Cargo.toml  build.rs
assets/: auweb.desktop  tomorrownighteighties.xml
src/: actions.rs  actions_tests.rs  config.rs  gtk_ext.rs  html.rs  main.css  main.exe.manifest  main.glade  main.rc  main.rs  syntax_highlight.rs  text_out.rs  xml.rs
src/test_data/: headers1
