[package]
name = "web_api_client"
version = "0.1.6"
authors = ["kykc"]
build = "build.rs"
license = "MIT"
description = "Simple HTTP client with GTK UI written in Rust"

[dependencies]
gio = "^0.5"
gdk = "^0.9"
serde = "^1.0"
serde_derive = "^1.0"
reqwest = "^0.8"
libxml = "^0.2"
dirs = "^1.0"

[dependencies.sourceview]
features = ["v3_20"]
version = "^0.5"

[dependencies.gtk]
version = "^0.5"
features = ["v3_20"]

[dependencies.serde_json]
version = "^1.0"
features = ["preserve_order"]

[target.'cfg(windows)'.build-dependencies]
windres = "^0.2"

[package.metadata.deb]
assets = [
    ["target/release/web_api_client", "usr/bin/auweb", "755"],
    ["assets/auweb.desktop", "usr/share/applications/", "644"],
    ["assets/auweb.png", "usr/share/icons/", "644"],
    ["assets/tomorrownighteighties.xml", "usr/share/gtksourceview-3.0/styles/", "644"],
]